capa-bff-domain-hjson/src/main/java/group/rxcloud/capa/bff/hjson/inbound/parse/CustomerJsonParser.java
package group.rxcloud.capa.bff.hjson.inbound.parse;// Generated from CustomerJson.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CustomerJsonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, STRING=12, NUMBER=13;
	public static final int
		RULE_customerJson = 0, RULE_service = 1, RULE_serviceBody = 2, RULE_requestObj = 3, 
		RULE_requestValue = 4, RULE_requestBody = 5, RULE_singleRequestField = 6, 
		RULE_responseBody = 7, RULE_singleResponseField = 8, RULE_singleRequestFieldValue = 9, 
		RULE_singleResponseFieldValue = 10, RULE_value = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"customerJson", "service", "serviceBody", "requestObj", "requestValue", 
			"requestBody", "singleRequestField", "responseBody", "singleResponseField", 
			"singleRequestFieldValue", "singleResponseFieldValue", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "','", "'}'", "':'", "'['", "']'", "'('", "')'", "'true'", 
			"'false'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"STRING", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CustomerJson.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CustomerJsonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CustomerJsonContext extends ParserRuleContext {
		public List<ServiceContext> service() {
			return getRuleContexts(ServiceContext.class);
		}
		public ServiceContext service(int i) {
			return getRuleContext(ServiceContext.class,i);
		}
		public CustomerJsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customerJson; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterCustomerJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitCustomerJson(this);
		}
	}

	public final CustomerJsonContext customerJson() throws RecognitionException {
		CustomerJsonContext _localctx = new CustomerJsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_customerJson);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(T__0);
			setState(25);
			service();
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(26);
				match(T__1);
				setState(27);
				service();
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(33);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public ServiceBodyContext serviceBody() {
			return getRuleContext(ServiceBodyContext.class,0);
		}
		public ServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_service; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitService(this);
		}
	}

	public final ServiceContext service() throws RecognitionException {
		ServiceContext _localctx = new ServiceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_service);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(STRING);
			setState(36);
			match(T__3);
			setState(37);
			serviceBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceBodyContext extends ParserRuleContext {
		public List<RequestObjContext> requestObj() {
			return getRuleContexts(RequestObjContext.class);
		}
		public RequestObjContext requestObj(int i) {
			return getRuleContext(RequestObjContext.class,i);
		}
		public ServiceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterServiceBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitServiceBody(this);
		}
	}

	public final ServiceBodyContext serviceBody() throws RecognitionException {
		ServiceBodyContext _localctx = new ServiceBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_serviceBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__4);
			setState(40);
			requestObj();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(41);
				match(T__1);
				setState(42);
				requestObj();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestObjContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public RequestValueContext requestValue() {
			return getRuleContext(RequestValueContext.class,0);
		}
		public RequestObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestObj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestObj(this);
		}
	}

	public final RequestObjContext requestObj() throws RecognitionException {
		RequestObjContext _localctx = new RequestObjContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_requestObj);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(STRING);
			setState(51);
			match(T__3);
			setState(52);
			requestValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestValueContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(CustomerJsonParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(CustomerJsonParser.STRING, i);
		}
		public RequestBodyContext requestBody() {
			return getRuleContext(RequestBodyContext.class,0);
		}
		public ResponseBodyContext responseBody() {
			return getRuleContext(ResponseBodyContext.class,0);
		}
		public RequestValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestValue(this);
		}
	}

	public final RequestValueContext requestValue() throws RecognitionException {
		RequestValueContext _localctx = new RequestValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_requestValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__6);
			setState(55);
			match(STRING);
			setState(56);
			match(T__3);
			setState(57);
			requestBody();
			setState(58);
			match(T__1);
			setState(59);
			match(STRING);
			setState(60);
			match(T__3);
			setState(61);
			responseBody();
			setState(62);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestBodyContext extends ParserRuleContext {
		public List<SingleRequestFieldContext> singleRequestField() {
			return getRuleContexts(SingleRequestFieldContext.class);
		}
		public SingleRequestFieldContext singleRequestField(int i) {
			return getRuleContext(SingleRequestFieldContext.class,i);
		}
		public RequestBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestBody(this);
		}
	}

	public final RequestBodyContext requestBody() throws RecognitionException {
		RequestBodyContext _localctx = new RequestBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_requestBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			singleRequestField();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(66);
				match(T__1);
				setState(67);
				singleRequestField();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRequestFieldContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public SingleRequestFieldValueContext singleRequestFieldValue() {
			return getRuleContext(SingleRequestFieldValueContext.class,0);
		}
		public SingleRequestFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRequestField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleRequestField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleRequestField(this);
		}
	}

	public final SingleRequestFieldContext singleRequestField() throws RecognitionException {
		SingleRequestFieldContext _localctx = new SingleRequestFieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_singleRequestField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(STRING);
			setState(76);
			match(T__3);
			setState(77);
			singleRequestFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResponseBodyContext extends ParserRuleContext {
		public List<SingleResponseFieldContext> singleResponseField() {
			return getRuleContexts(SingleResponseFieldContext.class);
		}
		public SingleResponseFieldContext singleResponseField(int i) {
			return getRuleContext(SingleResponseFieldContext.class,i);
		}
		public ResponseBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_responseBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterResponseBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitResponseBody(this);
		}
	}

	public final ResponseBodyContext responseBody() throws RecognitionException {
		ResponseBodyContext _localctx = new ResponseBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_responseBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__0);
			setState(80);
			singleResponseField();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(81);
				match(T__1);
				setState(82);
				singleResponseField();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleResponseFieldContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public SingleResponseFieldValueContext singleResponseFieldValue() {
			return getRuleContext(SingleResponseFieldValueContext.class,0);
		}
		public SingleResponseFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleResponseField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleResponseField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleResponseField(this);
		}
	}

	public final SingleResponseFieldContext singleResponseField() throws RecognitionException {
		SingleResponseFieldContext _localctx = new SingleResponseFieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_singleResponseField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(STRING);
			setState(91);
			match(T__3);
			setState(92);
			singleResponseFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRequestFieldValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(CustomerJsonParser.NUMBER, 0); }
		public SingleRequestFieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRequestFieldValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleRequestFieldValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleRequestFieldValue(this);
		}
	}

	public final SingleRequestFieldValueContext singleRequestFieldValue() throws RecognitionException {
		SingleRequestFieldValueContext _localctx = new SingleRequestFieldValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_singleRequestFieldValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << STRING) | (1L << NUMBER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleResponseFieldValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(CustomerJsonParser.NUMBER, 0); }
		public SingleResponseFieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleResponseFieldValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleResponseFieldValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleResponseFieldValue(this);
		}
	}

	public final SingleResponseFieldValueContext singleResponseFieldValue() throws RecognitionException {
		SingleResponseFieldValueContext _localctx = new SingleResponseFieldValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_singleResponseFieldValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << STRING) | (1L << NUMBER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(CustomerJsonParser.NUMBER, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << STRING) | (1L << NUMBER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}